--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,16 +2,13 @@ workflows:
   build-android:
     name: Build Android APK
     environment:
-      sdk: flutter
       flutter: "3.19.6"
     scripts:
       - name: Install dependencies
-        script: flutter pub get
+        script: |
+          flutter pub get
       - name: Build APK
-        script: flutter build apk --release
+        script: |
+          flutter build apk --release
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
-    publishing:
-      email:
-        recipients:
-          - your-email@example.com
