--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,8 +1,14 @@
 workflows:
   build-android:
-    name: Build Android APK
+    name: Build Solo Leveling APK
+    max_build_duration: 60
     environment:
-      flutter: "3.19.6"
+      flutter: stable
+      xcode: latest
+      android_signing:
+        keystore_reference: YOUR_KEYSTORE_REFERENCE  # تقدر تشيله لو مش هتستخدم توقيع
+      vars:
+        PACKAGE_NAME: "com.example.sololeveling"
     scripts:
       - name: Install dependencies
         script: |
@@ -12,3 +18,7 @@ workflows:
           flutter build apk --release
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
+    publishing:
+      email:
+        recipients:
+          - omareno818@gmail.com
